# 2025-10-27-shell-script-manager-tauri

./: .editorconfig  .gitignore  .prettierrc  AUTO_START_BACKEND.md  COLLISION_DETECTION_GUIDE.md  CORS_FIX.md  DND_KIT_GUIDE.md  DOCUMENTATION_SUMMARY.md  DTO_ID_FIX.md  FOLDER_API_MIGRATION.md  LIQUIBASE_MIGRATION_SUMMARY.md  MANUAL_BACKEND_LAUNCH.md  PRODUCTION_BUILD_GUIDE.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  README_SPRING_BACKEND.md  REDUX_USAGE.md  RTK_QUERY_USAGE.md  SETUP_COMPLETE_SUMMARY.md  SPRING_BOOT_AUTO_START_SETUP_COMPLETE.md  TAURI_COMMANDS.md  build-frontend-only.sh  build-production.sh  copy-python-scripts.sh  ensure-resources.sh  install_python_runtime.sh  package.json  remove-foreign-keys.sql  schema.html  tailwind.config.ts  tsconfig.json  vite.config.ts
backend-spring/: .gitignore  ACTION_SUMMARY.md  CHANGES_EVENT_TESTING.md  CONSOLIDATION_SUMMARY.md  DOCUMENTATION_INDEX.md  EVENT_DRIVEN_ARCHITECTURE.md  EVENT_TESTING_GUIDE.md  EVENT_TESTING_QUICK_START.md  FIX_ROLLBACK_ERROR.md  JAEGER_QUERY_ENRICHMENT.md  PRISMA_SPRING_WORKFLOW.md  QUERY_ENRICHMENT_COMPLETE.md  QUICK_START.md  README.md  RUST_INTEGRATION_EXAMPLE.md  TESTING_AND_CONTAINERS_COMPLETE.md  TESTING_GUIDE.md  TEST_IMPROVEMENTS_CASCADE_DELETION.md  TRACING_SETUP_COMPLETE.md  TROUBLESHOOTING_JDBC_COMMIT.md  URGENT_FIX_STEPS.md  WORKSPACE_TESTS_COMBINED.md  build.gradle.kts  check-test-prerequisites.sh  cleanup-duplicate-docs.sh  create-testcontainers-config.sh  download-jre.ps1  download-jre.sh  fix-duplicates.sql  get-db-connection.sh  run-diagnostics.sh  settings.gradle.kts  setup-integration-tests.sh  stop-test-db.sh  test-and-view.sh  view-test-report.sh
backend-spring/processor/: build.gradle.kts  settings.gradle.kts
command-flow-visualizer/: package.json
command-flow-visualizer/src/: CommandFlowVisualizer.tsx
docs/: 0_READ_ME_FIRST.md  1_START_HERE.md  2_OVERVIEW.md  3_COMPLETE_SETUP_GUIDE.md  4_QUICK_START.md  5_FLYWAY_WORKFLOW.md  5_LIQUIBASE_WORKFLOW.md  5_PRISMA_SPRING_WORKFLOW.md  6_RUST_INTEGRATION.md  CREATING_NEW_WINDOWS.md  DEEP_LINK_GUIDE.md  DND_ANIMATION_FIX_GUIDE.md  DND_KIT_GUIDE.md  DND_SORTING_STRATEGIES_GUIDE.md  FIX_DUPLICATE_ROWS.md  OFFLINE_MONACO_EDITOR_GUIDE.md  PROJECT_SUMMARY.md  PYTHON_FASTAPI_GUIDE.md  README.md  SPRING_BOOT_STARTUP_ORDER.md  SQLITE_FOREIGN_KEYS_CASCADE.md
python-backend/: README.md 02-35-38-724.md  app.py  migrate_to_uv.py  migrate_to_uv.sh  pyproject.toml  sync_to_uv.sh
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  database.db  database.db-shm  here  schema.sql  schema.sql 11-50-22-305.sql  tauri.conf.json  tauri.conf.json.backup
src-tauri/capabilities/: default.json  markdown-windows.json
src-tauri/icons/: icon.icns
src-tauri/prisma/: schema.prisma  schema_postgresql.prisma
src-tauri/prisma/migrations/20251014224805_init/: migration.sql
src-tauri/prisma/migrations/20251016224051_add_index/: migration.sql
src-tauri/prisma/migrations/20251018095335_add_app_state/: migration.sql
src-tauri/prisma/migrations/20251029152544_init/: migration.sql
src-tauri/prisma/migrations/20251030072458_add_dark_mode/: migration.sql
src-tauri/src/: lib.rs  main.rs  prisma.rs
src-tauri/src/db/: get_db.rs  mod.rs
src-tauri/src/db/repository/: app_state_repository.rs  folder_repository.rs  mod.rs  script_repository.rs
src/app-component/: FolderColumn.tsx  (+1 more)
(+548 files in other folders)
