[project]
name = "python-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-doc>=0.0.4",
    "annotated-types>=0.7.0",
    "anyio>=4.12.0",
    "certifi>=2025.11.12",
    "charset-normalizer>=3.4.4",
    "click>=8.3.1",
    "distro>=1.9.0",
    "fastapi>=0.124.4",
    "h11>=0.16.0",
    "httpcore>=1.0.9",
    "httpx>=0.28.1",
    "idna>=3.11",
    "jiter>=0.12.0",
    "jsonpatch>=1.33",
    "jsonpointer>=3.0.0",
    "langchain-core>=1.2.5",
    "langgraph-checkpoint>=3.0.1",
    "langgraph-prebuilt>=1.0.5",
    "langgraph-sdk>=0.3.1",
    "langgraph>=1.0.5",
    "langsmith>=0.5.1",
    "mangum>=0.19.0",
    "numpy>=1.26.4",
    "openai>=2.11.0",
    "orjson>=3.11.5",
    "ormsgpack>=1.12.1",
    "packaging>=25.0",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.11",
    "pydantic-core>=2.41.5",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "requests-toolbelt>=1.0.0",
    "requests>=2.32.5",
    "sniffio>=1.3.1",
    "starlette>=0.50.0",
    "tenacity>=9.1.2",
    "tqdm>=4.67.1",
    "typing-extensions>=4.15.0",
    "typing-inspection>=0.4.2",
    "urllib3>=2.6.2",
    "uuid-utils>=0.12.0",
    "uvicorn>=0.38.0",
    "xxhash>=3.6.0",
    "zstandard>=0.25.0"
]
